# btchd

./: .env.example  .gitignore  README.md  hierarchical_summarizer.py  requirements.txt  visualize_delhi_summaries.py
backend/: app.py  labels.py  proofs.py
data/: delhi_labels_output.json  delhi_labels_output_full.json  delhi_labels_output_with_confidence.json  demoCitiesWithGeoJSON.json  proofs.json
db/: collection.py  database.py  index.py  types.py  utils.py  walrus_dbo.py
frontend/src/components/: Map.jsx  MapLabels.css  MapLabels.jsx  ZoomWatcher.jsx
frontend/src/hooks/: useFetchData.js
geofence_prover/: Cargo.toml  Nargo.toml  Prover.toml
geofence_prover/onchain/: Verifier.sol  foundry.toml  vk
geofence_prover/onchain/script/: CallVerify.s.sol  Deploy.s.sol
geofence_prover/onchain/src/: GeofenceRegistry.sol
geofence_prover/src/: main.nr
geolocation_summarizer/: hierarchical_summarizer.py  open_visualizations.py  summary_providers.py  update_demo.py  visualize_summaries.py
mopro-example-app/: Cargo.toml  Config.toml
mopro-example-app/MoproiOSBindings/: mopro.swift
mopro-example-app/ios/MoproApp/: Geohash.swift  (+9 more)
mopro-example-app/src/: lib.rs
scripts/: expt.ipynb  parse.ipynb  parse_json.py  sync.sh
server/: app.py  config.example.js  index.js  labels.py  models.py  package-lock.json  package.json  setup-env.js
server/db/: types.py  walrus_dbo.py
utils/: args.py  geo.py  json_parse.py  populate_db.py
walrusdb/: LICENSE.md  pyproject.toml
walrusdb/walrusdb/: collection.py  database.py  index.py  types.py  utils.py  walrus_dbo.py
(+6 files in other folders)
